# Vcl_finance

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  DEPLOY.md  OAT_ROUND_1.md  UAT_ROUND_1.md  petty_cash_continuous_ledger_design.md  petty_cash_continuous_ledger_plan.md  petty_cash_erpnext_migration_plan.md  petty_cash_ui_unification_plan.md
vcl_finance/: hooks.py  modules.txt  patches.txt
vcl_finance/ar_reconciliation/doctype/ar_allocation/: ar_allocation.json  ar_allocation.py
vcl_finance/ar_reconciliation/doctype/ar_customer_recon/: ar_customer_recon.json  ar_customer_recon.py
vcl_finance/ar_reconciliation/doctype/ar_open_entry/: ar_open_entry.json  ar_open_entry.py
vcl_finance/config/: desktop.py
vcl_finance/fixtures/: role.json
vcl_finance/petty_cash/: api.py  install.py  posting.py
vcl_finance/petty_cash/doctype/petty_cash_category/: petty_cash_category.json  petty_cash_category.py
vcl_finance/petty_cash/doctype/petty_cash_loan_entry/: petty_cash_loan_entry.json  petty_cash_loan_entry.py
vcl_finance/petty_cash/doctype/petty_cash_misc_entry/: petty_cash_misc_entry.json  petty_cash_misc_entry.py
vcl_finance/petty_cash/doctype/petty_cash_sheet/: __init__.py  (+2 more)
vcl_finance/petty_cash/patches/: migrate_voucher_category_and_wages_type.py
vcl_finance/public/css/: petty_cash.css  petty_cash_entry.css
vcl_finance/public/js/: petty_cash.js  petty_cash_entry.js
vcl_finance/www/petty-cash/: entry.html  entry.py  index.html  index.py  new.html  new.py  print.html  print.py  sheet.html  sheet.py
(+7 files in other folders)
